# zksync-os

./: .dockerignore  .gitignore  Cargo.toml  README.md  _typos.toml  deny.toml  flake.nix
api/: Cargo.toml
api/src/: lib.rs
basic_bootloader/: Cargo.toml
basic_bootloader/src/: lib.rs
basic_bootloader/src/bootloader/: block_header.rs  config.rs  constants.rs  errors.rs  gas_helpers.rs  mod.rs  paymaster_helper.rs  process_transaction.rs  result_keeper.rs  rlp.rs  run_single_interaction.rs  runner.rs  supported_ees.rs
basic_system/: ACKNOWLEDGEMENTS.md  Cargo.toml  LICENSE-APACHE
basic_system/src/: cost_constants.rs  lib.rs
basic_system/src/system_functions/: bn254_ecadd.rs  bn254_ecmul.rs  bn254_pairing_check.rs  ecrecover.rs  keccak256.rs  mod.rs  modexp.rs  p256_verify.rs  ripemd160.rs  sha256.rs
basic_system/src/system_implementation/: mod.rs
callable_oracles/: Cargo.toml
callable_oracles/src/: lib.rs
callable_oracles/src/arithmetic/: mod.rs
callable_oracles/src/hash_to_prime/: common.rs  compute.rs  evaluate.rs  mod.rs  verify.rs
callable_oracles/src/utils/: evaluate.rs  mod.rs  usize_slice_iterator.rs
circuit_test_program/: Cargo.toml  dump_bin.sh
circuit_test_program/.cargo/: config.toml
circuit_test_program/src/: main.rs
crypto/: ACKNOWLEDGEMENTS.md  Cargo.toml
crypto/src/: bigint_riscv.rs  lib.rs
crypto/src/ark_ff_delegation/: README.md  const_helpers.rs  mod.rs
crypto/src/bigint_arithmatic/: mod.rs  u256.rs  u512.rs
crypto/src/bigint_delegation/: delegation.rs  mod.rs  u256.rs  u512.rs
crypto/src/blake2s/: delegated_extended.rs  mod.rs  naive.rs
crypto/src/bls12_381/: mod.rs
crypto/src/bn254/: mod.rs
crypto/src/k256/: mod.rs
crypto/src/modexp/: mod.rs
crypto/src/p256/: mod.rs
crypto/src/ripemd160/: mod.rs
crypto/src/secp256k1/: README.md  mod.rs  recover.rs
crypto/src/secp256r1/: context.rs  mod.rs  test_vectors.rs  u64_arithmatic.rs  verify.rs  wnaf.rs
crypto/src/sha256/: mod.rs
crypto/src/sha3/: mod.rs
crypto/tests/: secp256k1.proptest-regressions  secp256k1.rs  secp256r1.proptest-regressions  secp256r1.rs
cycle_marker/: Cargo.toml
cycle_marker/src/: lib.rs
evm_interpreter/: ACKNOWLEDGEMENTS.md  Cargo.toml
evm_interpreter/src/: bytecode_preprocessing.rs  ee_trait_impl.rs  error.rs  errors.rs  evm_stack.rs  frame_heap.rs  gas.rs  gas_constants.rs  i256.rs  interpreter.rs  lib.rs  native_resource_constants.rs  opcodes.rs  stack.rs  u256.rs  utils.rs
evm_interpreter/src/instructions/: arithmetic.rs  bitwise.rs  control_flow.rs  environment.rs  heap.rs  host.rs  mod.rs  stack.rs  system.rs
forward_system/: ACKNOWLEDGEMENTS.md  Cargo.toml
forward_system/src/: lib.rs
forward_system/src/run/: error.rs  errors.rs  mod.rs  oracle.rs  output.rs  preimage_source.rs  result_keeper.rs  tree.rs  tx_result_callback.rs  tx_source.rs
forward_system/src/system/: bootloader.rs  logger.rs  mod.rs  system.rs
iwasm/iwasm_interpreter/: Cargo.toml  README.md
iwasm/iwasm_interpreter/src/: constants.rs  export_descriptions.rs  leb128.rs  lib.rs  utils.rs
iwasm/iwasm_specification/: Cargo.toml
iwasm/iwasm_specification/src/: host_ops.rs  intx.rs  lib.rs  sys.rs
iwasm/syslib/: Cargo.toml  README.md  build.sh
iwasm/syslib/docs/: Calldata overlay.md  Contracts.md  _0_Intro.md
iwasm/syslib/src/: interface.rs  lib.rs  qol.rs  sys.rs
iwasm/syslib/tests/: abi_encode.rs
iwasm/syslib_derive/: Cargo.toml
iwasm/syslib_derive/src/: analysis.rs  emit.rs  lib.rs  qol.rs
iwasm_ee/: Cargo.toml
iwasm_ee/src/: frame.rs  host.rs  host_ops.rs  interpreter.rs  lib.rs  memory_manager.rs
iwasm_ee/src/deployment_artifacts/: fts_mapping.rs  mod.rs
oracle_provider/: Cargo.toml
oracle_provider/src/: lib.rs
proof_running_system/: Cargo.toml
proof_running_system/src/: lib.rs  tests.rs
proof_running_system/src/io_oracle/: mod.rs
proof_running_system/src/memory_aux/: mod.rs  tagged_pointer.rs
proof_running_system/src/skip_list_quasi_vec/: mod.rs
proof_running_system/src/system/: bootloader.rs  mod.rs
proof_running_system/src/talc/: mod.rs
storage_models/: Cargo.toml
storage_models/src/: lib.rs  storage_model.rs
storage_models/src/common_structs/: generic_transient_storage.rs  mod.rs
storage_models/src/diffable/: mod.rs
supporting_crates/bigint_riscv/: Cargo.toml
supporting_crates/bigint_riscv/src/: arithmetic.rs  copy.rs  delegation.rs  lib.rs  utils.rs
supporting_crates/keccak/: Cargo.toml
supporting_crates/keccak/src/: lib.rs  unroll.rs
supporting_crates/modexp/: Cargo.toml
supporting_crates/modexp/src/: arith.rs  lib.rs  mpnat.rs
supporting_crates/nostd_compression/: Cargo.toml
supporting_crates/solidity_abi/: Cargo.toml
supporting_crates/solidity_abi_derive/: Cargo.toml
system_hooks/: Cargo.toml
system_hooks/src/: addresses_constants.rs  contract_deployer.rs  l1_messenger.rs  l2_base_token.rs  lib.rs  mock_precompiles.rs  nonce_holder.rs  precompiles.rs
zk_ee/: Cargo.toml
zk_ee/src/: execution_environment_type.rs  lib.rs
zk_ee/tests/: playground.rs
zksync_error/: Cargo.toml  build.rs
zksync_error/errors/: evm.json  zksync-os.json
zksync_error/resources/: error-model-dump.json
zksync_error/src/: identifier.rs  kind.rs  lib.rs
zksync_os/: .gitignore  ACKNOWLEDGEMENTS.md  Cargo.toml  README.md  build_release_std.sh  dump_bin.sh  dump_bin_manual.sh  dump_bin_no_delegation.sh  dump_bin_unlimited_native.sh  dump_bin_with_markers.sh  dump_bin_with_markers_and_p256.sh  dump_bin_with_markers_unlimited_native.sh  objdump.sh  objdump_manual.sh  rust-toolchain.toml  show_asm.sh  upd_local_era.sh
zksync_os/.cargo/: config.toml
zksync_os/reproduce/: Dockerfile  reproduce.sh
zksync_os/src/: helper_reg_utils.rs  machine_trap.rs  main.rs  quasi_uart.rs
zksync_os_error/: Cargo.toml  build.rs
zksync_os_error/errors/: evm.json  zksync-os.json  zksync-root-tmp.json
zksync_os_error/resources/: error-model-dump.json
zksync_os_error/src/: identifier.rs  kind.rs  lib.rs  packed.rs
zksync_os_runner/: Cargo.toml  README.md
zksync_os_runner/src/: lib.rs
(+562 files in other folders)
