[workspace]
resolver = "2"

members = [
    "api",
    "basic_bootloader",
    "basic_system",
    "callable_oracles",
    "crypto",
    "evm_interpreter",
    "forward_system",
    "oracle_provider",
    "proof_running_system",
    "storage_models",
    "zk_ee",
    "zksync_os_runner",
    "system_hooks",
    "supporting_crates/modexp",
    "supporting_crates/keccak",
    "supporting_crates/solidity_abi",
    "supporting_crates/solidity_abi_derive",
    "tests/rig",
    "tests/instances/transactions",
    "tests/instances/erc20",
    "tests/instances/forge_tests",
    "tests/instances/precompiles",
    "tests/instances/bench",
    "tests/instances/unit",
    "tests/instances/eth_runner",
    "tests/instances/system_hooks",
    "cycle_marker", 
    "tests/binary_checker"
]

exclude = [
    "zksync_os",
    "supporting_crates/nostd_compression",
    "iwasm_ee",
    "iwasm/iwasm_interpreter",
    "iwasm/iwasm_specification",
    "iwasm/syslib",
    "iwasm/syslib_derive",
    "crypto/src/blake2s/test_program",
    "circuit_test_program",
    "tests/contracts_wasm/c_erc20",
    "tests/contracts_wasm/bench",
    "tests/contracts_wasm/unit",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]

[workspace.dependencies]
risc_v_simulator = { git = "https://github.com/matter-labs/zksync-airbender", tag = "v0.3.1"}
blake2s_u32 = { git = "https://github.com/matter-labs/zksync-airbender", tag = "v0.3.1"}
prover_examples = { git = "https://github.com/matter-labs/zksync-airbender", tag = "v0.3.1"}
trace_and_split = { git = "https://github.com/matter-labs/zksync-airbender", tag = "v0.3.1"}
execution_utils = { git = "https://github.com/matter-labs/zksync-airbender", tag = "v0.3.1"}

# [profile.dev]
# opt-level = 0
# lto = false
# panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[patch."https://github.com/matter-labs/zksync-airbender"]
# blake2s_u32 = {git = "ssh://git@github.com/matter-labs/zksync-airbender.git", branch = "av_bigint_precompile", features = ["opcode_stats"] }
# risc_v_simulator = {git = "ssh://git@github.com/matter-labs/zksync-airbender.git", branch = "av_bigint_precompile", features = ["opcode_stats"] }
# prover_examples = {git = "ssh://git@github.com/matter-labs/zksync-airbender.git", branch = "av_bigint_precompile", features = ["opcode_stats"] }
# riscv_common = {git = "ssh://git@github.com/matter-labs/zksync-airbender.git", branch = "av_bigint_precompile", features = ["opcode_stats"] }

# blake2s_u32 = { path = "../zksync-airbender/blake2s_u32" }
# prover_examples = { path = "../zksync-airbender/circuit_defs/prover_examples" }
# trace_and_split = { path = "../zksync-airbender/circuit_defs/trace_and_split" }
# risc_v_simulator = { path = "../zksync-airbender/risc_v_simulator" }
# execution_utils = { path = "../zksync-airbender/execution_utils" }

