[package]
name = "zksync_os_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

forward_system = { path = "../forward_system"}
oracle_provider = { path = "../oracle_provider" }
zksync_os_runner = { path = "../zksync_os_runner"}
risc_v_simulator = { git = "https://github.com/matter-labs/zksync-airbender"}


[features]
# By default, use the risc_v_simulator with delegation (which is faster).
default = ["risc_v_simulator/delegation"]
