[package]
name = "basic_bootloader"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_ee = { path = "../zk_ee", default-features = false }
cycle_marker = { path = "../cycle_marker" }
evm_interpreter = { path = "../evm_interpreter", default-features = false }
system_hooks = { path = "../system_hooks", default-features = false }
basic_system = { path = "../basic_system", default-features = false }
ruint = { version = "1.14", default-features = false, features = ["alloc"] }
crypto = { path = "../crypto", default-features = false }
seq-macro = "*"
hex = {version = "*", optional = true}
arrayvec = { version = "0.7.4", default-features = false }
either = { version = "*", default-features = false }
u256 = { path = "../supporting_crates/u256" }

[features]
testing = ["zk_ee/testing", "evm_interpreter/testing", "hex"]
default = ["testing"]
code_in_kernel_space = []
transfers_to_kernel_space = []
charge_priority_fee = []
evm-compatibility = ["code_in_kernel_space", "transfers_to_kernel_space", "system_hooks/mock-unsupported-precompiles", "charge_priority_fee"]
cycle_marker = ["system_hooks/cycle_marker"]
resources_for_tester = []
unlimited_native = []
report_native = []
disable_system_contracts = []
