[package]
name = "forward_system"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# temporary for witgen
zksync_os_runner = {path = "../zksync_os_runner"}
oracle_provider = { path = "../oracle_provider" }
zk_ee = { path = "../zk_ee", default-features = false }
evm_interpreter = { path = "../evm_interpreter", default-features = false }
basic_system = { path = "../basic_system", default-features = false }
system_hooks = { path = "../system_hooks", default-features = false }
basic_bootloader = { path = "../basic_bootloader", default-features = false }
ruint = { version = "1.14", default-features = false, features = ["alloc"] }
crypto = { path = "../crypto", default-features = false }
seq-macro = "*"
arrayvec = { version = "0.7.4", default-features = false }
either = { version = "*", default-features = false }
hex = { version = "*", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
u256 = { path = "../supporting_crates/u256" }
bigint_riscv = { path = "../supporting_crates/bigint_riscv" }
bincode = "1.3"

[features]
testing = ["zk_ee/testing", "evm_interpreter/testing", "basic_system/testing", "basic_bootloader/testing", "hex"]
default = ["testing"]
no_print = []
unlimited_native = ["basic_bootloader/unlimited_native"]
evm-compatibility = ["basic_bootloader/evm-compatibility", "basic_system/evm-compatibility"]
# Adds a field with native resource used to the block output
report_native = ["basic_bootloader/report_native"]
disable_system_contracts = ["basic_bootloader/disable_system_contracts"]
