[package]
name = "iwasm_ee"
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]

[dependencies]
ruint = { version = "1.14", default-features = false, features = ["alloc"] }
zk_ee = { path = "../zk_ee", default-features = false }
crypto = { path = "../crypto", default-features = false }
arrayvec = { version = "0.7.4", default-features = false }
iwasm_interpreter = { path = "../iwasm/iwasm_interpreter/", default-features = false }
iwasm_specification = { path = "../iwasm/iwasm_specification" }

hex = { version = "*", optional = true}

[features]
testing = ["zk_ee/testing", "hex"]
default = ["testing"]
