[package]
name = "system_hooks"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_ee = { path = "../zk_ee", default-features = false }
ruint = { version = "1.12.3", default-features = false, features = ["alloc"] }
crypto = { path = "../crypto", default-features = false }
evm_interpreter = { path = "../evm_interpreter", default-features = false }
cycle_marker = { path = "../cycle_marker" }

arrayvec = { version = "0.7.4", default-features = false }

[features]
mock-unsupported-precompiles = []
cycle_marker = []
