[package]
name = "zksync_error"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"]}
strum = { version = "0.27.1", default-features = false }
strum_macros = "0.27.1"
zksync_basic_types = "0.1.0"

[features]
runtime_documentation = []
serialized_errors = []
packed_errors = []

[lib]
doctest = false

[build-dependencies]
zksync-error-codegen = { git = "https://github.com/matter-labs/zksync-error", branch = "41-adapt-for-zksync-os", default-features = true }
