[package]
name = "zksync_os"
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r0 = "1.0.0"
riscv = "0.11"
heapless = { version = "*", default-features = false }
proof_running_system = { path = "../proof_running_system", default-features = false}
crypto = { path = "../crypto", optional = true }
u256 = { path = "../supporting_crates/u256", optional = true }
riscv_common = {git = "https://github.com/matter-labs/zksync-airbender.git", tag = "0.2.0" , features = ["custom_panic", "custom_allocator"]}
#riscv_common = {path = "../../zksync-airbender/riscv_common" , features = ["custom_panic", "custom_allocator"]}

[profile.dev]
opt-level = 0
lto = false
codegen-units = 1
panic = "abort"
debug = true

[profile.dev.overrides."*"]
opt-level = 0
lto = false
codegen-units = 1
panic = "abort"
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true

[profile.release.overrides."*"]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true

[features]
scalloc = ["proof_running_system/scalloc"]
no_exception_handling = []
print_debug_info = ["proof_running_system/global-alloc"]
single_round_with_control = ["crypto", "crypto/single_round_with_control"]
bigint_delegation = ["crypto", "crypto/bigint_ops"]
delegation = ["bigint_delegation", "single_round_with_control"]
proving = ["crypto/proving", "u256/delegation"]
default = ["proof_running_system/evm-compatibility"]
cycle_marker = ["proof_running_system/cycle_marker"]
unlimited_native = ["proof_running_system/unlimited_native"]
wrap-in-batch = ["proof_running_system/wrap-in-batch"]

# [patch."https://github.com/matter-labs/zksync-airbender"]
# blake2s_u32 = {git = "ssh://git@github.com/matter-labs/zksync-airbender.git", branch = "av_bigint_precompile" }
