[package]
name = "zksync_os_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
risc_v_simulator = { git = "https://github.com/matter-labs/zksync-airbender", features = ["delegation"] }
trace_and_split = { git = "https://github.com/matter-labs/zksync-airbender" }
execution_utils = { git = "https://github.com/matter-labs/zksync-airbender" }
prover_examples = { git = "https://github.com/matter-labs/zksync-airbender" }
cycle_marker = { path = "../cycle_marker" }
# risc_v_simulator = { path = "../../zksync-airbender/risc_v_simulator" }

[features]
opcode_stats = ["risc_v_simulator/opcode_stats"]
cycle_marker = ["risc_v_simulator/cycle_marker", "cycle_marker/use_risc_v_simulator"]
