[package]
name = "zksync_os_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
risc_v_simulator = { workspace = true, features = ["delegation"] }
trace_and_split = { workspace = true }
execution_utils = { workspace = true }
prover_examples = { workspace = true }
cycle_marker = { path = "../cycle_marker" }
# risc_v_simulator = { path = "../../zksync-airbender/risc_v_simulator" }
numfmt = "*"

[features]
opcode_stats = ["risc_v_simulator/opcode_stats"]
cycle_marker = ["risc_v_simulator/cycle_marker", "cycle_marker/use_risc_v_simulator"]
