[package]
name = "syslib_derive"
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]

[lib]
proc-macro = true

[dependencies]
syn = { version="2.0", features=["full","extra-traits"] }
quote = "1.0"
sha3 = "*"
proc-macro2 = "*"

# [profile.release]
# opt-level = 3
# panic = "abort"
# # strip = true
# codegen-units = 1
# lto = "fat"

# [target.wasm32-unknown-unknown.dependencies]

# [target.wasm32-unknown-unknown]
# rustflags = [
#     "-C", "link-arg=-zstack-size=1024",
#     "-C", "target-feature=+multivalue",
# ]
#
# [build]
# target = "wasm32-unknown-unknown"
#
# [features]
# default_panic_handler = []
# default = ["default_panic_handler"]
