[package]
name = "bigint_riscv"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ruint = {version = "1.15.0", default-features=false}
serde = { version = "1.0", default-features = false, features = ["derive"] }


[features]
serde = []