[package]
name = "const_keccak256"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[features]
no_unroll = [] # Do no unroll loops for binary size reduction
