[package]
name = "solidity_abi"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ruint = { version = "1.14", default-features = false, features = ["alloc"] }
solidity_abi_derive = { path = "../solidity_abi_derive"}
arrayvec = {version = "0.7", default-features = false }
sha3 = { version = "0.10", default-features = false }
const_keccak256 = { path = "../keccak"}

[dev-dependencies]
hex = "*"
