[package]
name = "solidity_abi_derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
syn = { version = "2", features = ["extra-traits", "printing", "full"]}
quote = { version = "1" }
proc-macro2 = "1"
proc-macro-error2 = "2"
sha3 = { version = "0.10", default-features = false }

[lib]
proc-macro = true